--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   }
 }
