--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "node --env-file .env --watch src/server.ts",
+    "drizzle:generate": "npx drizzle-kit generate",
+    "drizzle:migrate": "npx drizzle-kit migrate",
+    "drizzle:studio": "npx drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "@fastify/swagger": "^9.5.1",
+    "@scalar/fastify-api-reference": "^1.34.2",
+    "drizzle-orm": "^0.44.4",
     "fastify": "^5.5.0",
+    "fastify-type-provider-zod": "^5.0.3",
+    "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.15.5",
     "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
     "tsup": "^8.5.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
