--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "pretest": "dotenv -e .env.test drizzle-kit migrate",
+    "test": "dotenv -e .env.test vitest run",
+    "test:coverage": "dotenv -e .env.test vitest --coverage",
+    "test:ui": "dotenv -e .env.test vitest --ui --api 9527",
     "dev": "node --env-file .env --watch src/server.ts",
-    "drizzle:generate": "npx drizzle-kit generate",
-    "drizzle:migrate": "npx drizzle-kit migrate",
-    "drizzle:studio": "npx drizzle-kit studio"
+    "db:seed": "node --env-file .env src/database/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -16,20 +22,29 @@
   "dependencies": {
     "@fastify/swagger": "^9.5.1",
     "@scalar/fastify-api-reference": "^1.34.2",
+    "argon2": "^0.44.0",
     "drizzle-orm": "^0.44.4",
     "fastify": "^5.5.0",
     "fastify-type-provider-zod": "^5.0.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "dotenv": "^17.2.1",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
+    "supertest": "^7.1.4",
     "tsup": "^8.5.0",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
